--- a/index.html
+++ b/index.html
@@ -11,26 +11,28 @@
 		<h1>Hangman</h1>
 		<hr>
 	</header>
-	<h2 class="previous">Previous Answer</h2>
-	<div class="box1">
-		<img src="assets/images/spacefiller.jpg">
-	</div>
-	<div class="box2">
-		<div class="start">
-			Press any key to get started!
+	<div class="main_content">
+		<div class="box1">
+			<h2 class="previous">Previous Answer</h2>
+			<img src="assets/images/spacefiller.jpg">
 		</div>
-		<div class="wins">	
-			Wins
-		</div>
-		<div class="current_word">	
-			Current Word 
-		</div>
-		<div class="guesses_left">	
-			Number of guesses left
-		</div>
-		<div class="already_guessed"> 	
-			Letters already guessed
-		</div>
+		<div class="box2">
+			<div class="start">
+				Press any key to get started!
+			</div>
+			<div class="wins">	
+				Wins
+			</div>
+			<div class="current_word">	
+				Current Word 
+			</div>
+			<div class="guesses_left">	
+				Number of guesses left
+			</div>
+			<div class="already_guessed"> 	
+				Letters already guessed
+			</div>
+		</div>	
 	</div>		
 
 </body>
