--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	
 </head>
-<body onkeydown="begin()">
+<body>
 
 
 	<header>
@@ -27,10 +27,9 @@
 			<div class="wins">	
 				Wins
 			</div>
-			<div class="current_word">	
-				Current Word 
-				<div id="current">
-				</div>
+			<div>	
+				Current Word
+				<div id="current_word"></div> 
 			</div>
 			<div class="guesses_left">	
 				Number of guesses left
