--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="main_content">
 		<div class="box1">
 			<h2 class="previous">Previous Answer</h2>
-			<img src="assets/images/begin.jpg" width="225px">
+			<img src="assets/images/keepCalm.png" width="225px">
 		</div>
 		<div class="box2">
 			<div class="start">
