--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="main_content">
 		<div class="box1">
 			<h2 class="previous">Previous Answer</h2>
-			<img src="assets/images/keepCalm.png" width="225px">
+			<img id="picture" src="assets/images/keepCalm.png" width="225px">
 		</div>
 		<div class="box2">
 			<div class="start">
@@ -31,11 +31,13 @@
 				Current Word
 				<div id="current_word"></div> 
 			</div>
-			<div class="guesses_left">	
+			<div>	
 				Number of guesses left
+				<div id="guesses_left"> 7 </div>
 			</div>
-			<div class="already_guessed"> 	
+			<div> 	
 				Letters already guessed
+				<div id="already_guessed"></div>
 			</div>
 		</div>	
 	</div>
@@ -47,7 +49,8 @@
 
 
 
-	
+<script type="text/javascript" src="assets/javascript/game.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
 
-</body>	<script type="text/javascript" src="assets/javascript/game.js"></script>
+</body>
 </html>
