added reset function

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 			<div class="start">
 				Press any key to get started!
 			</div>
-			<div class="wins">	
+			<div>	
 				Wins
+				<div id="wins"></div>
 			</div>
 			<div>	
 				Current Word
