cleaned up css and added previous js

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<div class="main_content">
 		<div class="box1">
 			<h2 class="previous">Previous Answer</h2>
+			<div id="pre"></div>
 			<img id="picture" src="assets/images/keepCalm.png" width="225px">
 		</div>
 		<div class="box2">
